--- a/mangohud.conf
+++ b/mangohud.conf
@@ -5,4 +5,4 @@ autostart_log=0
 log_interval=100
 toggle_logging=Shift_L+F2
 
-blacklist=pamac-manager,lact,ghb,bitwig-studio,ptyxis,yumex
+blacklist=pamac-manager,lact,ghb,bitwig-studio,ptyxis,yumex,kitty
